--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dependencies": {
     "express": "3.3.8",
     "mocha": "latest",
-    "bcrypt-nodejs": "latest",
+    "everyauth":"latest",
     "pg": "*"
   }
 }
