got nodejs working with 'forever' module on server

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -10,6 +10,8 @@
     "jade": "*",
     "stylus": "*",
     "pg": "*",
-    "joomla": "*"
+    "joomla": "*",
+    "forever": "*"
+    "forever-monitor": "*"
   }
 }
