changed folder name from db to postgres

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,7 +11,7 @@
     "stylus": "*",
     "pg": "*",
     "joomla": "*",
-    "forever": "*"
+    "forever": "*",
     "forever-monitor": "*"
   }
 }
