Revert "attempting to make a parent app.js for server and web-client app.js"
This reverts commit 2dd6c32086375be0d2010ba8b7a839061dee4be4.

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "In2Indie-Web-App",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
+  "name": "In2Indie",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
     "start": "node app.js"
-},
-    "dependencies": {
-        "express": "3.4.7",
-        "jade": "*",
-        "stylus": "*",
-        "pg": "*",
-        "forever": "*",
-        "forever-monitor": "*"
-    }
+  },
+  "dependencies": {
+    "express": "3.4.7",
+    "jade": "*",
+    "stylus": "*",
+    "pg": "*",
+    "joomla": "*",
+    "forever": "*",
+    "forever-monitor": "*"
+  }
 }
