--- a/server/postgres/package.json
+++ b/server/postgres/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "in2Indie-postgres-db",
-    "version": "0.0.1",
-    "private": true,	
-    "scripts": {},
-	"dependencies": {
-        "express": "3.3.8",
-        "pg": "*"
+  "name": "in2Indie-postgres-db",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {},
+  "dependencies": {
+    "express": "3.3.8",
+    "pg": "^3.0.3",
+    "sequelize": "*"
   }
 }
