--- a/db/package.json
+++ b/db/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "express": "3.3.8",
     "pg": "^3.0.3",
-    "sequelize": "*"
+    "sequelize": "*",
+    "routes": "*",
+    "task": "*",
+    "lodash": "*"
   }
 }
