--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "lodash": "*",
     "connect-flash": "0.1.x",
     "passport": "*",
-    "passport-local": "*"
+    "passport-facebook": "*"
   }
 }
