--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "*",
     "connect-flash": "0.1.x",
     "passport": "*",
-    "passport-facebook": "*"
+    "passport-facebook": "*",
+    "passport-twitter": "*"
   }
 }
