--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DJchopstix13/In2Indie.git"
+    },
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
